# pg-dlock

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  taskfile.yaml
.github/: mergify.yml
.github/workflows/: lint.yaml  release.yaml  test.yaml
src/pg_dlock/: __init__.py  _async.py  _keys.py  _sync.py  errors.py
tests/: test_async.py  test_keys.py  test_sync.py
